# HGC

./: .gitignore  CMakeLists.txt  DataSet.md  README.md  _README.md  gitignore  main.cpp  图计算框架基础介绍.md  实验记录.md
HGC_fpga/BFS/: makeAocx_emulator.sh
HGC_fpga/WCC/host/: WCC.cpp
HGC_fpga/bellman/host/: bellman.cpp
HGC_fpga_intel/: CMakeLists.txt
HGC_fpga_intel/Kru/: makeAocx_emulator.sh
HGC_fpga_intel/bellman/: makeAocx_emulator.sh
HGC_fpga_xilinx/: Makefile  build.sh
HGC_fpga_xilinx/libs/xcl2/: xcl2.mk
HGC_fpga_xilinx/src/: host.cpp
HGC_fpga_xilinx/src/fpga/: config.h  fpga_mem.h  gs_top.cpp
algo/: CMakeLists.txt  algo.cpp  algo.h  algoHead.h
algo/BFS/: BFS.cpp  BFS.h
algo/Bellman/: bellman.cpp  bellman.h
algo/Kruskal/: Kruskal.cpp  Kruskal.h
algo/PR/: PR.cpp  PR.h
algo/WCC/: WCC.cpp  WCC.h
env/: opencl.cpp  opencl.h
env/kernel/: BFS_GPU.cl  Bellman_GPU.cl  Kruskal_GPU.cl  WCC_GPU.cl  add.cl  reduction_complete.cl
graph/: graph.cpp  graph.h
other/: MemMapDemo.cpp  arraySum.cpp  main.cpp  test.cpp  vectorTest.cpp
